--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <title>Weather App</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <main>
+      <form class="form">
+        <input
+        class="location-input"
+        requiered
+        type="text"
+        placeholder="Search location"
+        >
+      </form>
+    </main>
 </body>
 </html>
