Add basic html and css

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         requiered
         type="text"
         placeholder="Search location..."
+        maxlength="20"
         >
         <button class="search-btn">
           <i class="fa-solid fa-magnifying-glass"></i>
@@ -28,6 +29,7 @@
           <p class="main-degrees">11°C</p>
           <p class="main-location">Capbreton</p>
           <p class="main-date">Saturdat, 4th Feb 2023</p>
+        </div>
         </div>
         <div class="other-info">
           <div class="feels-like container">
@@ -51,7 +53,6 @@
             <p class="other-info-number">8.3 km/h</p>
           </div>
         </div>
-      </div>
     </main>
 </body>
 </html>
