--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,19 @@
       <div class="main-weather">
         </div>
         <div class="other-info">
-    
+        </div>
+        <div class="hourly-section">
+          <button class="24h-button">
+            <div class="every-three">
+              <div class="day-container">
+                <p class="day-name"></p>
+                <img class="day-icon">
+                <div class="hours">
+                
+              </div>
+              </div>
+            </div>
+          </button>
         </div>
     </main>
 </body>
