refactor render hours

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         class="location-input"
         requiered
         type="text"
-        placeholder="Search location..."
+        placeholder="Where in the world?"
         maxlength="20"
         >
         <button class="search-btn">
@@ -24,18 +24,9 @@
         </div>
         <div class="other-info">
         </div>
-        <div class="hourly-section">
-          <button class="24h-button">
-            <div class="every-three">
-              <div class="day-container">
-                <p class="day-name"></p>
-                <img class="day-icon">
-                <div class="hours">
-                
-              </div>
-              </div>
+        <div class="hour-section">
+        
             </div>
-          </button>
         </div>
     </main>
 </body>
