--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <form class="form">
         <input
         class="location-input"
-        requiered
+        required
         type="text"
         placeholder="Where in the world?"
         maxlength="20"
@@ -21,12 +21,11 @@
         </button>
       </form>
       <div class="main-weather">
-        </div>
         <div class="other-info">
         </div>
+        </div>
         <div class="hour-section">
-        
-            </div>
+          
         </div>
     </main>
 </body>
