--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,9 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </form>
-      <div class="main-weather">
-        <div class="other-info">
-        </div>
-        </div>
-        <div class="hour-section">
-          
-        </div>
+      <div class="main-weather"></div>
+      <div class="other-info"></div>
+      <div class="hour-section"></div>
     </main>
 </body>
 </html>
