--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/713945395b.js" crossorigin="anonymous"></script>
-    <title>Weather App</title>
+
+    <title>Your Weather App</title>
 </head>
 <body>
     <main>
